[DEV-26149] Replaced gson with jackson (#76)
* [DEV-26149] Replaced gson with jackson

* [DEV-26149] Replaced gson with jackson

* [DEV-26149] Replaced gson with jackson